--- a/css/index.css
+++ b/css/index.css
@@ -130,6 +130,64 @@ a:visited {
     text-decoration: none;
 }
 
+form {
+    display:flex;
+    flex-direction: column;
+    width: 45%;
+    justify-content: center;
+    margin: 0 auto;
+    margin-left: 4rem;
+    background-color: #eaf1f5;
+    padding: 1.5rem;
+    gap: 1 rem;
+    
+}
+
+form input,
+form textarea {
+    padding: 0.75rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 0.375rem;
+    font-family: "Inter", sans-serif;
+}
+
+form button {
+    width: 25%;
+    /*mar*/
+    align-self: center;
+    padding: 0.75rem;
+    background-color: #00707e;
+    color: white;
+    border: none;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+form button:hover {
+    background-color: #005f6a;
+}
+
+#messages li {
+    display: flex;
+    justify-content: space-evenly;
+
+}
+#messages li a {
+    text-decoration: underline;
+    color:#360b9b;    
+}
+
+#messages li a:hover {
+    color: rgb(73, 163, 185);
+}
+
+footer p {
+    text-align: center;
+    font-size: 1rem;
+}
+
 /* Tablet Style */
 
 @media (max-width: 1024px) {
@@ -188,6 +246,21 @@ a:visited {
     .social li a {
         font-size: 1.5rem;
     }
+
+    form {
+        width: 90%;
+        padding: 1rem;
+    }
+
+    form input, 
+    font button,
+    form textarea {
+        font-size: 0.95rem;
+    }
+
+    footer p {
+        font-size: 0.9rem;
+}
     
 }
     
